feat(cb2-10457): update naming conventions

--- a/src/main/resources/assets/stylesheets/adr.hbs
+++ b/src/main/resources/assets/stylesheets/adr.hbs
@@ -17,10 +17,10 @@ width: 9pt
 float: left;
 margin-left: 18%;
 }
-#chasisNumber{
+#vin{
 margin-left:23%;
 }
-#registrationNumber{
+#vrm{
 margin-left: 29%;
 }
 .applicantDetails{
