feat(cb2-10457): repair tests

--- a/src/main/resources/assets/stylesheets/adr.hbs
+++ b/src/main/resources/assets/stylesheets/adr.hbs
@@ -39,7 +39,7 @@ padding-top: 20%;
 p{
 margin: 0;
 }
-.vehicleType {
+.adrVehicleType {
 border-style: solid;
 border-width: 1px;
 margin-top:0.2%;
