--- a/src/main/resources/views/CommercialVehicles/ADR_PASS.hbs
+++ b/src/main/resources/views/CommercialVehicles/ADR_PASS.hbs
@@ -27,7 +27,7 @@
         {{#if adrData.isVehicleTypeNull}}
             <br/>
         {{else}}
-            <p><span id="vehicleType">{{adrData.adrVehicleType}}</span></p>
+            <p><span id="adrVehicleType">{{adrData.adrVehicleType}}</span></p>
         {{/if}}
     </div>
     <div class="permittedDangerousGoods">
