feat(cb2-10457): update formatting on document

--- a/src/main/resources/assets/stylesheets/adr.hbs
+++ b/src/main/resources/assets/stylesheets/adr.hbs
@@ -18,10 +18,13 @@ float: left;
 margin-left: 18%;
 }
 #vin{
-margin-left:23%;
+margin-left:24%;
 }
 #vrm{
 margin-left: 29%;
+}
+.firstPage{
+padding-top:70px;
 }
 .applicantDetails{
 border-style: solid;
