--- a/src/main/resources/assets/stylesheets/adr.hbs
+++ b/src/main/resources/assets/stylesheets/adr.hbs
@@ -75,7 +75,7 @@
     padding-bottom:0%;
     }
     .dangerousGoodsHeader{
-    padding-bottom: 8%;
+    padding-bottom: 3%;
     }
     #tankDescription {
     padding-right: 10%;
@@ -103,4 +103,22 @@
     }
     #signature{
     padding-top:5%;
+    }
+    .dangerousGoodAcronyms{
+        display: table;
+        width: 100%;
+        table-layout: fixed;
+    }
+    .dangerousGoodAcronyms > span{
+        display:inline-block;
+        width:15%;
+        text-align:center;
+    }
+    h3
+    {
+        margin-bottom: 1px !important;
+        margin-top: 2px !important;
+    }
+    .statements > p {
+      font-weight: bold;
     }
