feat(cb2-9866): rebased and added logger
feat(cb2-10900): IVA30 front page html/css

feat(cb2-10900): Removing TODOs, code formatting, replace link with hyperlink

feat(cb2-10900): remove loggers

feat(cb2-9866): rebased and added logger

feat(cb2-10900): remove loggers

feat(cb2-10900): Test dynamic paging

feat(cb2-10900): Remove test data

feat(cb2-9976): updated models, added to handlebars to test

feat(cb2-9976): update model

feat(cb2-9976): added zero value constructor

feat(cb2-9976): updated model

feat(cb2-9976): fixed typo

feat(cb2-9976): updated format

feat(cb2-9976): updated format

feat(cb2-9976): updating additionalDefects key

feat(cb2-9976): camelCased properties coming in as part of payload

feat(cb2-9976): set up initial pdfVerification test

feat(cb2-9976): started IVA30 unit test

feat(cb2-9976): updated additional defect model

feat(cb2-9976): ignore unknown

feat(cb2-9976): typo correction

feat(cb2-9976): first attempt

feat(cb2-9976): attempt 2

feat(cb2-9976): corrected field

feat(cb2-9976): added new keys to model

feat(cb2-9976): added class for lists

feat(cb2-9976): added capitalise and bold for section

feat(cb2-9976): added new paragraph

feat(cb2-9976): added uppercase

feat(cb2-9976): test formatting

feat(cb2-9976): commented out tests for deployment

feat(cb2-9976): reverted test provider

feat(cb2-9976): removed comments in .hbs that was causing issues

feat(cb2-9976): added line break

feat(cb2-9976): added if to additional notes

feat(cb2-9976): updated

feat(cb2-9976): updated pdf verification tests

feat(cb2-9976): set up html verification tests

feat(cb2-9976): added tests for coverage

feat(cb2-9976): added tests for rs

feat(cb2-9976): additional defect tests

feat(cb2-9976): tidied up tests

feat(cb2-9976): updated naming convention in hbs class

feat(cb2-9976): updated enums

feat(cb2-9976): naming convention

feat(cb2-9976): corrected formatting

feat(cb2-9976): changed rs number to int

feat(cb2-9976): updated date 

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -147,6 +147,23 @@ margin-top: 0px;
 padding-top: 0px;
 list-style-type: none;
 }
+
+.required-standard-list {
+list-style-type: none;
+}
+
+.additional-defect-list {
+list-style-type: none;
+}
+
+.required-standard-section {
+text-transform:uppercase;
+}
+
+.test-category-value {
+text-transform:uppercase;
+}
+
 .item-list {
 margin-left: 50px;
 margin-bottom: 0px;
