--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title>IVA30</title>
-    <!-- <style type="text/css" media="print, screen">
+    <style type="text/css" media="print, screen">
         {{~> assets/stylesheets/iva-30 this}}
-    </style> -->
-    <link rel="stylesheet" href = "style.css">
+    </style>
 </head>
 
 <body>
