feat(cb2-10900): back page text matches new format

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -29,7 +29,7 @@
             <div class="header-pagination"> Page 1 of 2</div>
         </div>
         <div class="header-right">
-            <img src="{{root}}/assets/images/dvsa_crest.png" alt="DVSA" width="110"/>
+            <img src="dvsa-crest-small.png" alt="DVSA" width="110"/>
         </div>
     </div>
     <div class="section-title-border">
@@ -216,11 +216,13 @@
             <h1>YOUR RIGHT TO APPEAL</h1>
         </div>
         <div class="section-text-wrapper">
-            <p>If you do not agree with the refusal to issue an Individual Approval Certificate, you may appeal. If you
-                wish to appeal against all or any of the grounds for refusal you must complete form IVA17 which is
-                available from the test location or from the gov.uk website <strong>www.gov.uk/vehicleapproval</strong>. The form, together
-                with the appropriate fee, must be received at the Vehicle Approvals Section, DVSA, Ellipse, Padley
-                Road, Swansea, SA1 8AN within 14 days of the date the original notification of refusal was issued.</p>
+            <p>If you do not agree with the Refusal to Issue an Individual Approval Certificate, you may appeal. If you
+                wish to appeal against all or any of the grounds for refusal you must complete form <b>IVA17</b> which is
+                available from the <b>GOV.UK</b> website, <a href="www.gov.uk/vehicleapproval">www.gov.uk/vehicleapproval</a>.
+                Send the form to <b><u>approvals@dvsa.gov.uk</u></b>. DVSA will advise you how to pay by credit/debit card
+            or prefunded account after you have applied. It costs the same as the original test. The appeal must be recieved
+            at the <b>DVSA, Ellipse, Padley Road, Swansea, SA1 8AN</b> within 14 days, beginning with the date of the issue of the
+            notification of refusal.</p>
 
             <p>It is important that no modification/rectification work carried out on the vehicle before the appeal
                 test as this may affect the outcome of the appeal.</p>
