--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -1,9 +1,7 @@
 
-@page {
-counter-increment: page;
-counter-reset: page 1;
+@page{
 size: A4 portrait;
-margin: 20px 24px 0 24px;
+margin: 1cm auto 175px auto;
 @bottom-center {
 content: element(footer);
 }
@@ -31,6 +29,7 @@ font-size: 90%;
 
 .separate-page{
 page-break-after: always;
+break-after: page;
 }
 
 *,
@@ -82,7 +81,7 @@ width: 50%;
 }
 
 .footer {
-position: running(footer);
+position: running(footer)
 }
 
 .footer-left {
@@ -172,14 +171,8 @@ padding: 2px;
 margin-bottom: 0px;
 }
 
-.header-serial-no-value {
-font-weight: normal;
-margin-left: 5em;
-text-wrap: none;
-}
-
 .header-pagination {
-width: fit-content;
+width: 100px;
 border-style: solid;
 border-width: 1px;
 padding-left: 1em;
