--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -29,7 +29,7 @@
             <div class="header-pagination"> Page 1 of 2</div>
         </div>
         <div class="header-right">
-            <img src="dvsa-crest-small.png" alt="DVSA" width="110"/>
+            <img src="{{root}}/assets/images/dvsa_crest.png" width="110"/>
         </div>
     </div>
     <div class="section-title-border">
