feat(cb2-10900): correct document margins

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -1,7 +1,10 @@
 
 @page{
 size: A4 portrait;
-margin: 1cm auto 175px auto;
+margin-top: 50mm;
+margin-bottom: 50mm;
+margin-left: 1cm;
+margin-right: 1cm;
 @bottom-center {
 content: element(footer);
 }
@@ -116,7 +119,7 @@ margin: 0px;
 }
 
 .bold-title {
-font-size: 1.5em;
+font-size: 1.25em;
 }
 
 .vehicle-section-list {
@@ -153,6 +156,8 @@ display: inline-block;
 .header-right {
 display: inline-block;
 float: right;
+padding-bottom: 0px;
+margin-bottom: 0px;
 }
 
 #defect-details-subtitle-border {
@@ -163,7 +168,6 @@ background-color: white;
 width: 250px;
 border-style: solid;
 border-width: 1px;
-margin-bottom: 1px;
 }
 
 .header-serial-no-title {
@@ -179,7 +183,7 @@ padding-left: 1em;
 padding-right: 1em;
 padding-top: 2em;
 padding-bottom: 2em;
-margin-top: 0px;
+margin-top: -1px;
 }
 
 .table {
