--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -9,12 +9,16 @@
 
 <body>
 
-<div class="footer">
-    <p class="footer-left"> <b class="bold-title">IVA30VTA (DVSA0842) </b> </p>
+<div class="footer-left">
+    <p> <b class="bold-title">IVA30VTA (DVSA0842) </b> </p>
+</div>
+<div class = "footer-mid">
     <span class="footer-current-page-number"></span>
     <span class="footer__bottom-page-counter-text"><b>of</b></span>
     <span class="footer-total-page-count"></span>
-    <p class="footer-right"> <b>Version 1.0 Apr 2024</b> </p>
+</div>
+<div class = "footer-right">
+    <p><b>Version 1.0 Apr 2024</b></p>
 </div>
 
 <div class="separate-page">
