feat(cb2-10900): css error

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -87,11 +87,11 @@ width: 50%;
 
 
 .footer-left {
-position: running(footer)
+position: running(footer-left)
 }
 
 .footer-mid {
-position: running(footer);
+position: running(footer-mid);
 text-align: center;
 }
 
@@ -107,7 +107,7 @@ font-weight: bold;
 
 .footer-right {
 text-align: right;
-position: running(footer);
+position: running(footer-right);
 }
 
 #no-margin-p {
