feat(cb2-10900): test if blank page still created

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -214,7 +214,7 @@
         </div>
     </div>
 
-    <!-- third box -->
+    <!-- third box
     <div class="section-border">
         <div class="section-title-border">
             <h1>YOUR RIGHT TO APPEAL</h1>
@@ -232,6 +232,7 @@
                 test as this may affect the outcome of the appeal.</p>
         </div>
     </div>
+    --->
 </div>
 </body>
 </html>
