--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -121,7 +121,7 @@
 </div>
 
 
-<div class="separate-page">
+<div class="separate-page" id="back-page">
     <!-- first box -->
     <div class="section-border">
         <div class="section-title-border">
@@ -211,6 +211,23 @@
             <p>You may have been notified of defects in addition to those appertaining to the approval requirements.
                 Even in the above circumstances you may be committing an offence if you use the vehicle, and it does
                 not comply with the various regulations relating to its construction and use.</p>
+        </div>
+    </div>
+    <div class="section-border">
+        <div class="section-title-border">
+            <h1>YOUR RIGHT TO APPEAL</h1>
+        </div>
+        <div class="section-text-wrapper">
+            <p>If you do not agree with the Refusal to Issue an Individual Approval Certificate, you may appeal. If you
+                wish to appeal against all or any of the grounds for refusal you must complete form <b>IVA17</b> which is
+                available from the <b>GOV.UK</b> website, <a href="www.gov.uk/vehicleapproval">www.gov.uk/vehicleapproval</a>.
+                Send the form to <b><u>approvals@dvsa.gov.uk</u></b>. DVSA will advise you how to pay by credit/debit card
+                or prefunded account after you have applied. It costs the same as the original test. The appeal must be recieved
+                at the <b>DVSA, Ellipse, Padley Road, Swansea, SA1 8AN</b> within 14 days, beginning with the date of the issue of the
+                notification of refusal.</p>
+
+            <p>It is important that no modification/rectification work carried out on the vehicle before the appeal
+                test as this may affect the outcome of the appeal.</p>
         </div>
     </div>
 </div>
