--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -75,6 +75,34 @@
             <h1> Required Standard(s) Not Met: </h1>
         </div>
         <div class="section-text-wrapper">
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
+            <p>NOISE: RSX Exhaust is a plastic straw</p>
             <!-- List incoming defects here -->
         </div>
     </div>
