feat(cb2-10900): hard text corrections

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -39,7 +39,7 @@
     <div class="section-title-border">
         <h1> INDIVIDUAL VEHICLE APPROVAL (IVA)</h1>
         <h1> NOTIFICATION OF REFUSAL TO ISSUE AN INDIVIDUAL APPROVAL CERTIFICATE </h1>
-        <p><b>The Road Vehicles (Approval) Regulations 2020</b></p>
+        <p id="cert-subtitle"><b>The Road Vehicles (Approval) Regulations 2020</b></p>
     </div>
 
     <p id = "appointment-text"> AN APPOINTMENT FOR RE-EXAMINATION <b>CANNOT</b> BE MADE ON THE DAY ON WHICH THIS EXAMINATION WAS CARRIED OUT
@@ -52,16 +52,16 @@
             <h1> VEHICLE DETAILS </h1>
         </th>
         </thead>
-        <tr class="vd-table-row-cell">
-            <td class="vd-table-row-cell"><b>Vehicle/Trailer NR No: </b> <!--Put data here --> </td>
-            <td class="vd-table-row-cell"><b>Test Category: </b> <!--Put data here --> </td>
+        <tr class="table-row-cell">
+            <td class="table-row-cell"><b>Vehicle/Trailer NR No: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Test Category: </b> <!--Put data here --> </td>
         </tr>
-        <tr class="vd-table-row-cell">
-            <td class="vd-table-row-cell"><b>Make/Model: </b> <!--Put data here --> </td>
-            <td class="vd-table-row-cell"><b>VIN/Chassis No: </b> <!--Put data here --> </td>
+        <tr class="table-row-cell">
+            <td class="table-row-cell"><b>Make/Model: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>VIN/Chassis No: </b> <!--Put data here --> </td>
         </tr>
-        <tr class="vd-table-row-cell">
-            <td class="vd-table-row-cell"> <b>Body Type: </b> <!--Put data here --> </td>
+        <tr class="table-row-cell">
+            <td class="table-row-cell"> <b>Body Type: </b> <!--Put data here --> </td>
             <td class = "no-border-cell"></td>
         </tr>
     </table>
@@ -87,7 +87,7 @@
     <table class="table">
         <tr>
             <td></td>
-            <td class="table-row-cell"> <b>Reapplication Required By: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Reapplication required by: </b> <!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell"> <b>Signed: </b> <!--Put data here --> </td>
@@ -98,8 +98,8 @@
             <td class="table-row-cell"> <b>Station: </b> <!--Put data here --> </td>
         </tr>
         <tr>
-            <td class="table-row-cell" colspan="2"> <p><b>The Following additional defects may result in the vehicle not complying with the requirements
-                of the Road Vehicles (Construction and Use) Regulations 1986. (See notes overleaf) </b></p>
+            <td class="table-row-cell" colspan="2"> <p><b>The following additional defects may result in the vehicle not complying with the requirements
+                of The Road Vehicles (Construction and Use) Regulations 1986. (See notes overleaf) </b></p>
                 <!-- Put AdditionalDefects here -->
             </td>
         </tr>
@@ -219,14 +219,14 @@
         </div>
         <div class="section-text-wrapper">
             <p>If you do not agree with the Refusal to Issue an Individual Approval Certificate, you may appeal. If you
-                wish to appeal against all or any of the grounds for refusal you must complete form <b>IVA17</b> which is
+                wish to appeal against all or any of the grounds for refusal you must complete form <u><b>IVA17</b></u> which is
                 available from the <b>GOV.UK</b> website, <a href="www.gov.uk/vehicleapproval">www.gov.uk/vehicleapproval</a>.
                 Send the form to <b><u>approvals@dvsa.gov.uk</u></b>. DVSA will advise you how to pay by credit/debit card
-                or prefunded account after you have applied. It costs the same as the original test. The appeal must be recieved
+                or prefunded account after you have applied. It costs the same as the original test. The appeal must be received
                 at the <b>DVSA, Ellipse, Padley Road, Swansea, SA1 8AN</b> within 14 days, beginning with the date of the issue of the
                 notification of refusal.</p>
 
-            <p>It is important that no modification/rectification work carried out on the vehicle before the appeal
+            <p>It is important that no modification/rectification work is carried out on the vehicle before the appeal
                 test as this may affect the outcome of the appeal.</p>
         </div>
     </div>
