--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -1,7 +1,7 @@
 
 @page{
 size: A4 portrait;
-margin 1cm 1cm 1cm 1cm;
+margin: 1cm 1cm 1cm 1cm;
 @bottom-left {
 content: element(footer-left);
 }
@@ -34,6 +34,10 @@ page-break-inside: avoid;
 font-size: 90%;
 }
 
+#cert-subtitle{
+font-size: 85%;
+}
+
 .separate-page{
 page-break-after: always;
 }
@@ -51,7 +55,7 @@ line-height: 1;
 
 .section-border {
 border-style: solid;
-border-color: black black black black;
+border-color: black;
 margin-bottom: 5px;
 }
 
@@ -194,16 +198,11 @@ margin-bottom: 1em;
 table-layout: auto;
 }
 
-.vd-table-row-cell {
-border-style: solid;
-border-width: 1px;
-width: 50%;
-}
-
 .table-row-cell {
 border-style: solid;
 border-width: 1px;
 width: 50%;
+vertical-align: middle;
 }
 
 .no-border-cell{
